--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,18 +13,18 @@
         android:layout_height="wrap_content"
         android:text="Accelerometer Values"
         android:textSize="40sp"
+        tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteX="9dp"
-        tools:layout_editor_absoluteY="44dp"
-        android:layout_marginTop="20dp"
-        tools:ignore="MissingConstraints" />
+        tools:layout_editor_absoluteY="44dp" />
 
     <TextView
         android:id="@+id/axisX"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="52dp"
+        android:layout_marginTop="20dp"
         android:text="X"
+        android:textColor="#2156F4"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -36,6 +36,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="32dp"
         android:text="Y"
+        android:textColor="#E91E1E"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/axisX" />
@@ -47,6 +48,7 @@
         android:layout_marginStart="52dp"
         android:layout_marginTop="36dp"
         android:text="Z"
+        android:textColor="#4FAF4C"
         android:textSize="40sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/axisY" />
